# dxt-lossless-transform

./: .envrc  .gitignore  .windsurfrules  CLAUDE.md  Cargo.toml  INITIAL.md  LICENSE  README-DEV.MD  README.MD  cbindgen_c.toml  cbindgen_cpp.toml  codecov.yml  devenv.nix  devenv.yaml  mkdocs.yml  out.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bc1_decode.rs  bc1_normalize.rs  bc1_normalize_all_modes.rs  bc1_normalize_in_place.rs  bc2_decode.rs  bc2_decode_color_only.rs  bc2_normalize.rs  bc2_normalize_all_modes.rs  bc2_normalize_in_place.rs  bc3_decode.rs  bc3_normalize.rs  bc3_normalize_all_modes.rs  bc3_normalize_in_place.rs
projects/api/dxt-lossless-transform-api-common/: Cargo.toml
projects/api/dxt-lossless-transform-api-common/src/: allocate.rs  lib.rs  test_prelude.rs
projects/api/dxt-lossless-transform-api-fileformats/: Cargo.toml
projects/api/dxt-lossless-transform-api-fileformats/src/: api.rs  error.rs  lib.rs
projects/api/dxt-lossless-transform-bc1-api/: Cargo.toml  README.MD
projects/api/dxt-lossless-transform-bc1-api/src/: builder.rs  determine_optimal_transform.rs  determine_optimal_transform_options_builder.rs  error.rs  lib.rs  optimal.rs  test_prelude.rs  transform.rs  transform_options_builder.rs
projects/api/dxt-lossless-transform-bc2-api/: Cargo.toml  README.MD
projects/api/dxt-lossless-transform-bc2-api/src/: lib.rs  test_prelude.rs
projects/api/dxt-lossless-transform-file-formats-api/: Cargo.toml  README.md
projects/api/dxt-lossless-transform-file-formats-api/src/: api.rs  bundle.rs  error.rs  lib.rs  test_prelude.rs
projects/api/dxt-lossless-transform-file-formats-api/tests/: integration_test.rs
projects/core/dxt-lossless-transform-bc1/: Cargo.toml
projects/core/dxt-lossless-transform-bc1/src/: determine_optimal_transform.rs  lib.rs  test_prelude.rs  transform.rs
projects/core/dxt-lossless-transform-bc3/: Cargo.toml
projects/core/dxt-lossless-transform-bc3/src/: lib.rs  test_prelude.rs  unaligned_rw.rs  utils.rs
projects/core/dxt-lossless-transform-bc7/: Cargo.toml
projects/core/dxt-lossless-transform-bc7/src/: lib.rs
projects/core/dxt-lossless-transform-common/: Cargo.toml  README.MD
projects/core/dxt-lossless-transform-common/src/: allocate.rs  cpu_detect.rs  lib.rs
projects/core/dxt-lossless-transform-file-formats-debug/: Cargo.toml  README.md
projects/core/dxt-lossless-transform-file-formats-debug/src/: block_extraction.rs  file_io.rs  format_inspection.rs  lib.rs
projects/dxt-lossless-transform/: Cargo.toml
projects/dxt-lossless-transform-api/: Cargo.toml
projects/dxt-lossless-transform-api/src/: api.rs  exports.rs  lib.rs
projects/dxt-lossless-transform-bc1/: Cargo.toml  README.MD
projects/dxt-lossless-transform-bc1/benches/bc1_detransform/: avx2.rs  portable32.rs  sse2.rs
projects/dxt-lossless-transform-bc1/benches/bc1_transform/: avx2.rs  main.rs  portable32.rs  portable64.rs  sse2.rs
projects/dxt-lossless-transform-bc1/benches/block_decode/: main.rs
projects/dxt-lossless-transform-bc1/benches/normalize_blocks/: main.rs
projects/dxt-lossless-transform-bc1/benches/split_blocks/: avx2.rs  avx512.rs  main.rs  portable32.rs  portable64.rs  sse2.rs
projects/dxt-lossless-transform-bc1/benches/transform_standard/: avx2.rs  avx512.rs  main.rs  portable32.rs  portable64.rs  sse2.rs
projects/dxt-lossless-transform-bc1/benches/unsplit_blocks/: avx2.rs  avx512.rs  main.rs  portable32.rs  sse2.rs
projects/dxt-lossless-transform-bc1/benches/untransform_standard/: avx2.rs  avx512.rs  main.rs  portable32.rs  sse2.rs
projects/dxt-lossless-transform-bc1/src/: determine_optimal_transform.rs  lib.rs  normalize_blocks.rs  test_prelude.rs
projects/dxt-lossless-transform-bc1/src/bc1/: mod.rs
projects/dxt-lossless-transform-bc1/src/bench/: mod.rs
projects/dxt-lossless-transform-bc1/src/detransform/: mod.rs
projects/dxt-lossless-transform-bc1/src/experimental/: mod.rs  normalize_blocks.rs
projects/dxt-lossless-transform-bc1/src/normalize_blocks/: mod.rs
projects/dxt-lossless-transform-bc1/src/split_blocks/: mod.rs
projects/dxt-lossless-transform-bc1/src/transforms/: mod.rs
projects/dxt-lossless-transform-bc1/src/untransform/: mod.rs
projects/dxt-lossless-transform-bc1/src/util/: bc1_decode.rs  cpu_detect.rs  mod.rs
projects/dxt-lossless-transform-cli/: Cargo.toml
projects/dxt-lossless-transform-cli/src/: debug.rs  error.rs  main.rs  util.rs
projects/dxt-lossless-transform-cli/src/bc7/: mod.rs  mode0-notes-2.md  mode0-notes.md  (+1 more)
projects/dxt-lossless-transform-common/: Cargo.toml  README.MD
projects/dxt-lossless-transform-common/src/: allocate.rs  color_565.rs  color_8888.rs  cpu_detect.rs  decoded_4x4_block.rs  lib.rs
projects/dxt-lossless-transform-dds/: Cargo.toml
projects/dxt-lossless-transform/src/: lib.rs
projects/extensions/dxt-lossless-transform-ltu/: Cargo.toml  README.MD
projects/extensions/dxt-lossless-transform-zstd/: Cargo.toml  README.MD
projects/tools/dxt-lossless-transform-cli/: Cargo.toml
src/: AGENTS.md  Cargo.toml  lib.rs
src/api/dxt-lossless-transform-api-common/: Cargo.toml  README.MD
src/api/dxt-lossless-transform-bc1-api/: README.MD
src/api/dxt-lossless-transform-bc2-api/: Cargo.toml  README.MD
src/api/dxt-lossless-transform-bc3-api/: README.MD
src/api/dxt-lossless-transform-file-formats-api/: Cargo.toml  README.md
src/assets/research/: dds-bc7-blocks.hexpat
src/assets/tests/: r2-256-bc1.dds
src/core/dxt-lossless-transform-bc1/: Cargo.toml  README.MD
src/core/dxt-lossless-transform-bc2/: Cargo.toml  README.MD
src/core/dxt-lossless-transform-bc3/: Cargo.toml  README.MD
src/core/dxt-lossless-transform-bc7/: Cargo.toml
src/core/dxt-lossless-transform-common/: Cargo.toml  README.MD
src/core/dxt-lossless-transform-file-formats-debug/: Cargo.toml  README.md
src/fuzz/: Cargo.toml
src/fuzz/fuzz_targets/: bc1_normalize_in_place.rs  bc2_decode_color_only.rs  bc2_normalize_in_place.rs  bc3_normalize_all_modes.rs
src/raw/: dxt1_block.rs  mod.rs
src/raw/dxt1/: mod.rs
src/tools/dxt-lossless-transform-cli/: Cargo.toml
(+1162 files in other folders)
