# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

[workspace]
members = [
    # High Level Crates (API)
    "projects/api/dxt-lossless-transform-api-common", # High level cross-crate 'stable' API 
    "projects/api/dxt-lossless-transform-bc1-api", # High level cross-crate 'stable' API
    "projects/api/dxt-lossless-transform-bc2-api", # High level cross-crate 'stable' API
    "projects/api/dxt-lossless-transform-bc3-api", # High level cross-crate 'stable' API
    "projects/api/dxt-lossless-transform-bc7-api", # High level cross-crate 'stable' API

    # Low Level Crates (Core)
    "projects/core/dxt-lossless-transform-bc1",
    "projects/core/dxt-lossless-transform-bc2",
    "projects/core/dxt-lossless-transform-bc3",
    "projects/core/dxt-lossless-transform-bc7",
    "projects/core/dxt-lossless-transform-common",

    # Extensions
    "projects/extensions/dxt-lossless-transform-dds", # Adds DDS support
    "projects/extensions/dxt-lossless-transform-zstd", # ZStandard size estimation
    "projects/extensions/dxt-lossless-transform-ltu", # Lossless Transform Utils size estimation

    # CLI Tool
    "projects/tools/dxt-lossless-transform-cli",

    # Fuzzing
    "fuzz",
]
resolver = "2"
