[package]
name = "dxt-lossless-transform-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
rgbcx-sys = "1.1.3"
bcdec_rs = "0.2.0"
dxt-lossless-transform-bc1 = { path = "../projects/core/dxt-lossless-transform-bc1", features = ["experimental"] }
dxt-lossless-transform-bc2 = { path = "../projects/core/dxt-lossless-transform-bc2", features = ["experimental"] }
dxt-lossless-transform-bc3 = { path = "../projects/core/dxt-lossless-transform-bc3", features = ["experimental"] }
dxt-lossless-transform-common = { path = "../projects/core/dxt-lossless-transform-common" }

[[bin]]
name = "bc1_decode"
path = "fuzz_targets/bc1_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bc2_decode"
path = "fuzz_targets/bc2_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bc2_decode_color_only"
path = "fuzz_targets/bc2_decode_color_only.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bc3_decode"
path = "fuzz_targets/bc3_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bc1_normalize"
path = "fuzz_targets/bc1_normalize.rs"
test = false
doc = false
bench = false
required-features = ["dxt-lossless-transform-bc1/experimental"]

[[bin]]
name = "bc1_normalize_all_modes"
path = "fuzz_targets/bc1_normalize_all_modes.rs"
test = false
doc = false
bench = false
required-features = ["dxt-lossless-transform-bc1/experimental"]

[[bin]]
name = "bc2_normalize"
path = "fuzz_targets/bc2_normalize.rs"
test = false
doc = false
bench = false
required-features = ["dxt-lossless-transform-bc2/experimental"]

[[bin]]
name = "bc2_normalize_all_modes"
path = "fuzz_targets/bc2_normalize_all_modes.rs"
test = false
doc = false
bench = false
required-features = ["dxt-lossless-transform-bc2/experimental"]

[[bin]]
name = "bc3_normalize"
path = "fuzz_targets/bc3_normalize.rs"
test = false
doc = false
bench = false
required-features = ["dxt-lossless-transform-bc3/experimental"]

[[bin]]
name = "bc3_normalize_all_modes"
path = "fuzz_targets/bc3_normalize_all_modes.rs"
test = false
doc = false
bench = false
required-features = ["dxt-lossless-transform-bc3/experimental"]

[[bin]]
name = "bc1_normalize_in_place"
path = "fuzz_targets/bc1_normalize_in_place.rs"
test = false
doc = false
bench = false
required-features = ["dxt-lossless-transform-bc1/experimental"]

[[bin]]
name = "bc2_normalize_in_place"
path = "fuzz_targets/bc2_normalize_in_place.rs"
test = false
doc = false
bench = false
required-features = ["dxt-lossless-transform-bc2/experimental"]

[[bin]]
name = "bc3_normalize_in_place"
path = "fuzz_targets/bc3_normalize_in_place.rs"
test = false
doc = false
bench = false
required-features = ["dxt-lossless-transform-bc3/experimental"]
