[package]
name = "dxt-lossless-transform-bc1"
version = "0.1.0"
edition = "2021"
description = "Fast lossless transforms for BC1 texture data that improve their compression ratio. This is an unstable crate containing the raw implementation."
repository = "https://github.com/Sewer56/dxt-lossless-transform"
license-file = "LICENSE"
include = ["src/**/*"]
readme = "README.MD"

[features]
default = ["std"]
std = []
# See README.md for more information on using Profile-Guided Optimization.
pgo = []
# Use CPU features selected at compile time.
no-runtime-cpu-detection = []

[dependencies]
rstest = "0.25.0"
dxt-lossless-transform-common = { path = "../dxt-lossless-transform-common" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5.1"
safe-allocator-api = "0.3.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

# Benchmark Stuff
[[bench]]
name = "split_blocks"
path = "benches/split_blocks/main.rs"
harness = false

[[bench]]
name = "unsplit_blocks"
path = "benches/unsplit_blocks/main.rs"
harness = false

[[bench]]
name = "block_decode"
path = "benches/block_decode/main.rs"
harness = false