[package]
name = "dxt-lossless-transform-bc1"
version = "0.1.0"
edition = "2021"
description = "Fast lossless transforms for BC1 texture data that improve their compression ratio. This is an unstable crate containing the raw implementation."
repository = "https://github.com/Sewer56/dxt-lossless-transform"
license-file = "LICENSE"
include = ["src/**/*"]
readme = "README.MD"

[features]
default = ["std"]
std = []
# See README.md for more information on using Profile-Guided Optimization.
pgo = []
# Use CPU features selected at compile time.
no-runtime-cpu-detection = []
# Use nightly compiler features (AVX512)
nightly = []

[dependencies]
dxt-lossless-transform-common = { path = "../dxt-lossless-transform-common" }
likely_stable = "0.1.3"
safe-allocator-api = "0.3.0"
derive-enum-all-values = "0.2.0"
cpufeatures = "0.2.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5.1"
rstest = "0.25.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

# Benchmark Stuff
[[bench]]
name = "split_blocks"
path = "benches/split_blocks/main.rs"
harness = false

[[bench]]
name = "unsplit_blocks"
path = "benches/unsplit_blocks/main.rs"
harness = false

[[bench]]
name = "block_decode"
path = "benches/block_decode/main.rs"
harness = false

[[bench]]
name = "normalize_blocks"
path = "benches/normalize_blocks/main.rs"
harness = false