[package]
name = "dxt-lossless-transform-dds"
version = "0.1.0"
edition = "2021"
description = "Adds DDS support for the dxt-lossless-transform crate."
repository = "https://github.com/Sewer56/dxt-lossless-transform"
license-file = "LICENSE"
include = ["src/**/*"]
readme = "README.MD"

[lib]
bench = false

[features]
default = ["std"]
std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5.1"
rstest = "0.25.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
