[package]
name = "dxt-lossless-transform-api-common"
version = "0.1.0"
edition = "2021"
readme = "README.MD"

[dependencies]
# Only used for serialization/deserialization of certain data types, which is optional and would not
# reflect on binary size when unused.
bincode = "2.0.1"

# Internal common crate for conversion functions
dxt-lossless-transform-common = { path = "../../core/dxt-lossless-transform-common" }

[features]
default = ["std"]
# Enable use of standard library, currently a no-op.
std = []
# Compiles the public C API for the crate.
c-exports = []
