[package]
name = "dxt-lossless-transform-api-common"
version = "0.1.0"
edition = "2021"
readme = "README.MD"

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Only used for serialization/deserialization of certain data types, which is optional and would not
# reflect on binary size when unused.
bincode = "2.0.1"

# Internal common crate for conversion functions
dxt-lossless-transform-common = { path = "../../core/dxt-lossless-transform-common" }

# Provides aligned memory allocation
safe-allocator-api = "0.4.0"

[features]
default = ["std"]
# Enable use of standard library, currently a no-op.
std = []
# Use nightly compiler features
nightly = ["safe-allocator-api/nightly", "dxt-lossless-transform-common/nightly"]
# Compiles the public C API for the crate.
c-exports = []
