[package]
name = "dxt-lossless-transform-api-common"
version = "0.1.0"
edition = "2021"
readme = "README.MD"

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Only used for serialization/deserialization of certain data types, which is optional and would not
# reflect on binary size when unused.
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "derive"] }

# Internal common crate for conversion functions
dxt-lossless-transform-common = { workspace = true, default-features = false }

# Provides aligned memory allocation
safe-allocator-api = { version = "0.4.0", default-features = false }

[features]
default = ["std"]
# Enable use of standard library.
std = ["bincode/std", "safe-allocator-api/std", "dxt-lossless-transform-common/std"]
# Use nightly compiler features
nightly = ["safe-allocator-api/nightly", "dxt-lossless-transform-common/nightly"]
# Compiles the public C API for the crate.
c-exports = []
