[package]
name = "dxt-lossless-transform-bc1-api"
version = "1.0.0"
edition = "2024"
readme = "README.MD"
description = "Safe, high-level API for BC1 texture data lossless transforms with automatic validation and error handling"
repository.workspace = true
license-file.workspace = true
include = ["src/**/*"]

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = [
    "dxt-lossless-transform-bc1/std",
    "dxt-lossless-transform-api-common/std",
    "dxt-lossless-transform-common/std",
    "safe-allocator-api/std",
    "thiserror/std",
]
# Use CPU features selected at compile time.
no-runtime-cpu-detection = [
    "dxt-lossless-transform-bc1/no-runtime-cpu-detection",
    "dxt-lossless-transform-common/no-runtime-cpu-detection",
]
# Use nightly compiler features (AVX512)
nightly = [
    "dxt-lossless-transform-bc1/nightly",
    "dxt-lossless-transform-common/nightly",
    "dxt-lossless-transform-api-common/nightly",
    "safe-allocator-api/nightly",
]
# Enable C exports
c-exports = [
    "dxt-lossless-transform-api-common/c-exports",
    "dxt-lossless-transform-bc1/c-exports",
]

[dependencies]
dxt-lossless-transform-bc1 = { workspace = true, default-features = false }
dxt-lossless-transform-api-common = { workspace = true, default-features = false }
dxt-lossless-transform-common = { workspace = true, default-features = false }
safe-allocator-api = { version = "0.4.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
dxt-lossless-transform-ltu = { workspace = true, default-features = true }
